--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="textbox">
             <p class="space"> </p>
-            <p>Hello, I'm D3n1ed V01d and I'm a solo artist from the Netherlands. <br>I create music I find interesting and I hope you do so aswell.<br><a href="https://open.spotify.com/artist/7uGI8f5FvPjtByMKzlhaQQ?si=2aS8Lo57QiGNQbeJQ4eB1A">Listen to my music :)</a></p>
+            <p>Hello, I'm D3n1ed V01d and I'm a solo artist from the Netherlands. <br>I create music I find interesting and I hope you do so aswell.<br>Contact: d3n1edv01d@gmail.com<br><a href="https://open.spotify.com/artist/7uGI8f5FvPjtByMKzlhaQQ?si=2aS8Lo57QiGNQbeJQ4eB1A">Listen to my music :)</a></p>
         </div>
         <div class="plug">
             <p>Hello</p>
@@ -62,3 +62,4 @@
     </body>
 
 </html>
+
